Bug:  PRD Reviewer:  Self Comments:  Fixed the glass panel put up behind the GWT UI dialogs so that it works correctly in IE6, ...
Files:
M    gwt/src/org/kablink/teaming/gwt/client/widgets/DlgBox.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -1638,6 +1638,15 @@ body, table td, select
 	z-index: 1001;
 }
 
+.teamingDlgBox_Glass
+{
+	background-color: #000;
+	filter: alpha(opacity=50);
+	opacity: 0.5;
+	overflow: hidden;
+	z-index: 1000;
+}
+
 .teamingDlgBox .popupContent
 {
 	background-color: #f6f6f6;
